testsuite/tests/indexed-types/should_fail/T14904.stderr

T14904.hs:8:8: error:
    • Expected kind ‘forall (a :: k1). g a’, but ‘f’ has kind ‘k0’
    • In the first argument of ‘F’, namely
        ‘((f :: forall a. g a) :: forall a. g a)’
      In the type family declaration for ‘F’
